Change favicon link to local file 'fav.png'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smart Refinance Path | The Future of Wealth Management</title>
-    <link rel="icon" type="image/png" href="https://image.s7.sfmc-content.com/lib/fe2911717d640474771277/m/1/2c6b88a2-e310-4ffd-bc64-b4c1993872d9.png">
+    <link rel="icon" type="image/png" src="fav.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
