Revise team member details and grid layout
Updated team member section to include new members and adjusted layout.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smart Refinance Path | The Future of Wealth Management</title>
-    <link rel="icon" type="image/png" src="fav.png">
+    <link rel="icon" type="image/png" href="https://image.s7.sfmc-content.com/lib/fe2911717d640474771277/m/1/2c6b88a2-e310-4ffd-bc64-b4c1993872d9.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
@@ -349,30 +349,31 @@
                 <p class="text-base md:text-lg text-slate-500 font-medium max-w-2xl mx-auto">Certified experts dedicated to navigating your financial future with precision and care.</p>
             </div>
             
-            <div class="flex overflow-x-auto lg:grid lg:grid-cols-5 gap-8 pb-10 lg:pb-0 no-scrollbar snap-x">
-                <!-- Member 1: Satyam Sharma -->
+            <!-- Updated to 4 members grid -->
+            <div class="flex overflow-x-auto lg:grid lg:grid-cols-4 gap-8 pb-10 lg:pb-0 no-scrollbar snap-x">
+                <!-- Member 1: Raghvendra Singh -->
                 <div class="min-w-[280px] snap-center bento-card p-6 reveal">
-                    <img src="https://image.s12.sfmc-content.com/lib/fe24117371640575711d79/m/1/3a98a204-3f19-4009-b554-ac7f29231cf9.jpg" 
-                         class="w-full h-64 object-cover rounded-2xl mb-6 grayscale hover:grayscale-0 transition duration-500" alt="Satyam Sharma">
-                    <h4 class="text-xl font-black text-slate-900">Satyam Sharma</h4>
+                    <img src="https://image.s1.sfmc-content.com/lib/fe2b117271640474711375/m/1/0a98e9c8-b458-48bb-9c91-4301da0b3841.jpg" 
+                         class="w-full h-64 object-cover rounded-2xl mb-6 grayscale hover:grayscale-0 transition duration-500" alt="Raghvendra Singh">
+                    <h4 class="text-xl font-black text-slate-900">Raghvendra Singh</h4>
                     <p class="text-xs font-bold text-indigo-600 uppercase tracking-widest mb-4">Principal Mortgage Strategist</p>
-                    <p class="text-slate-500 text-xs leading-relaxed">Masterminding optimal refinancing structures to unlock liquidity and minimize long-term interest burdens.</p>
+                    <p class="text-slate-500 text-xs leading-relaxed">Leading complex refinancing initiatives to optimize household liquidity and minimize long-term interest burdens.</p>
                 </div>
-                <!-- Member 2: Rahul Sinha -->
+                <!-- Member 2: Shivansh Gupta -->
                 <div class="min-w-[280px] snap-center bento-card p-6 reveal delay-100">
-                    <img src="https://image.s12.sfmc-content.com/lib/fe24117371640575711d79/m/1/453c0a4f-676c-4f5b-9eff-7876e6f950e2.jpg" 
-                         class="w-full h-64 object-cover rounded-2xl mb-6 grayscale hover:grayscale-0 transition duration-500" alt="Rahul Sinha">
-                    <h4 class="text-xl font-black text-slate-900">Rahul Sinha</h4>
+                    <img src="https://image.s1.sfmc-content.com/lib/fe2b117271640474711375/m/1/690eea2e-b120-415e-8e9c-d5e62d6a9cf4.jpg" 
+                         class="w-full h-64 object-cover rounded-2xl mb-6 grayscale hover:grayscale-0 transition duration-500" alt="Shivansh Gupta">
+                    <h4 class="text-xl font-black text-slate-900">Shivansh Gupta</h4>
                     <p class="text-xs font-bold text-indigo-600 uppercase tracking-widest mb-4">Senior Portfolio Architect</p>
-                    <p class="text-slate-500 text-xs leading-relaxed">Designing diversified, high-yield asset allocations that align perfectly with individual risk profiles.</p>
+                    <p class="text-slate-500 text-xs leading-relaxed">Expertly balancing asset allocations to secure consistent yield across global equity and debt markets.</p>
                 </div>
-                <!-- Member 3: Ayush Srivastava -->
+                <!-- Member 3: Simran Pradhan -->
                 <div class="min-w-[280px] snap-center bento-card p-6 reveal delay-200">
-                    <img src="https://image.s12.sfmc-content.com/lib/fe24117371640575711d79/m/1/7ed61586-710f-45a6-aa31-70c463325a7f.jpg" 
-                         class="w-full h-64 object-cover rounded-2xl mb-6 grayscale hover:grayscale-0 transition duration-500" alt="Ayush Srivastava">
-                    <h4 class="text-xl font-black text-slate-900">Ayush Srivastava</h4>
+                    <img src="https://image.s1.sfmc-content.com/lib/fe2b117271640474711375/m/1/d346dc44-1abc-4774-8a1d-48b34d32233d.jpg" 
+                         class="w-full h-64 object-cover rounded-2xl mb-6 grayscale hover:grayscale-0 transition duration-500" alt="Simran Pradhan">
+                    <h4 class="text-xl font-black text-slate-900">Simran Pradhan</h4>
                     <p class="text-xs font-bold text-indigo-600 uppercase tracking-widest mb-4">Chief Quantitative Analyst</p>
-                    <p class="text-slate-500 text-xs leading-relaxed">Leveraging advanced mathematical models and AI to pinpoint alpha-generating opportunities in volatile markets.</p>
+                    <p class="text-slate-500 text-xs leading-relaxed">Utilizing deep data modeling to identify early-stage signals and drive superior risk-adjusted returns.</p>
                 </div>
                 <!-- Member 4: Nikhil Trivedi -->
                 <div class="min-w-[280px] snap-center bento-card p-6 reveal delay-300">
@@ -380,15 +381,7 @@
                          class="w-full h-64 object-cover rounded-2xl mb-6 grayscale hover:grayscale-0 transition duration-500" alt="Nikhil Trivedi">
                     <h4 class="text-xl font-black text-slate-900">Nikhil Trivedi</h4>
                     <p class="text-xs font-bold text-indigo-600 uppercase tracking-widest mb-4">Fiduciary Wealth Consultant</p>
-                    <p class="text-slate-500 text-xs leading-relaxed">Providing unbiased, client-first financial guidance rooted in transparency and professional integrity.</p>
-                </div>
-                <!-- Member 5: Deepankar Paswan -->
-                <div class="min-w-[280px] snap-center bento-card p-6 reveal delay-400">
-                    <img src="https://image.s12.sfmc-content.com/lib/fe24117371640575711d79/m/1/10dc5668-5bdf-48ae-ae20-dad1b62cc1d6.jpg" 
-                         class="w-full h-64 object-cover rounded-2xl mb-6 grayscale hover:grayscale-0 transition duration-500" alt="Deepankar Paswan">
-                    <h4 class="text-xl font-black text-slate-900">Deepankar Paswan</h4>
-                    <p class="text-xs font-bold text-indigo-600 uppercase tracking-widest mb-4">FinTech Product Lead</p>
-                    <p class="text-slate-500 text-xs leading-relaxed">Spearheading the development of seamless, institutional-grade tools that simplify complex wealth management.</p>
+                    <p class="text-slate-500 text-xs leading-relaxed">Ensuring every strategic path is built on transparency, integrity, and the client's absolute best interests.</p>
                 </div>
             </div>
         </div>
